# delivery2

./: MAIN GUIDELINE-GOAL  first_screening_plan.txt  second_screening_plan.txt  test_omp.cpp
Guidelines/: last_delivery_prof_comments.txt
working-copy/repositoryX/PARCO-Computing-2026-244944-main/: .gitignore  CMakeLists.txt  README.md
